--- a/src/components/ListOfWords.astro
+++ b/src/components/ListOfWords.astro
@@ -1,15 +1,15 @@
 ---
 interface list {
-    Title: String
+    Title: String;
 }
 
-const {Title} = Astro.props
+const { Title } = Astro.props;
 ---
 
 <section class="list-words">
-    <h2 class="list-words-title">{Title}</h1>
+    <h2 class="list-words-title">{Title}</h2>
     <ul class="words">
-        <slot></slot>
+        <slot />
     </ul>
 </section>
 
@@ -18,7 +18,7 @@ const {Title} = Astro.props
         background: var(--color-2);
         padding: 15px 20px;
         border-radius: 15px;
-        width: 30%;
+        width: min(400px, 100%);
     }
     .list-words-title {
         margin-bottom: 20px;
